SUBDIRS = . pkg-config

EXTRA_DIST = \
	qmi-common.json \
	qmi-service-ctl.json \
	qmi-service-dms.json \
	qmi-service-wds.json \
	qmi-service-nas.json \
	qmi-service-wms.json \
	qmi-service-pdc.json \
	qmi-service-pds.json \
	qmi-service-pbm.json \
	qmi-service-uim.json \
	qmi-service-oma.json \
	qmi-service-wda.json \
	qmi-service-voice.json \
	qmi-service-loc.json \
	qmi-service-qos.json \
	qmi-service-gas.json \
	qmi-service-gms.json \
	qmi-service-dsd.json \
	qmi-service-sar.json \
	qmi-service-dpm.json \
	qmi-collection-minimal.json \
	qmi-collection-basic.json \
	$(NULL)
