SUBDIRS = . pkg-config

EXTRA_DIST = \
	mbim-service-basic-connect.json \
	mbim-service-sms.json \
	mbim-service-ussd.json \
	mbim-service-auth.json \
	mbim-service-phonebook.json \
	mbim-service-stk.json \
	mbim-service-dss.json \
	mbim-service-ms-firmware-id.json \
	mbim-service-ms-host-shutdown.json \
	mbim-service-ms-sar.json \
	mbim-service-proxy-control.json \
	mbim-service-qmi.json \
	mbim-service-atds.json \
	mbim-service-qdu.json \
	mbim-service-ms-uicc-low-level-access.json \
	mbim-service-intel-firmware-update.json \
	mbim-service-ms-basic-connect-extensions.json
